# main.go
@@ -14,21 +14,13 @@ import (
 func main() {
 	server := gin.Default()
 
-	file := controller.NewFileController()
-	directory := controller.NewDirectoryController()
+	mixin := controller.NewMixinController()
 
 	fs := server.Group("api/fs")
 	{
-		files := fs.Group("files")
-		{
-			files.GET(":id", file.GetInfo)
-		}
-		directories := fs.Group("directories")
-		{
-			directories.GET(":id", directory.GetInfo)
-			directories.GET(":id/files", directory.GetFiles)
-			directories.GET(":id/directories", directory.GetDirectories)
-		}
+		fs.GET(":id", mixin.GetInfo)
+		fs.GET(":id/files", mixin.GetFiles)
+		fs.GET(":id/directories", mixin.GetDirectories)
 	}
 	server.GET("/swagger/*any", swagger.WrapHandler(swaggerFiles.Handler))
 	server.Run(":3000")
